--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <button class="rojo" id="cancelar" onclick="cancel()" style="background-color: red; color: white; border-color: rgb(66, 66, 66); ">CANCELAR</button>
                         </div>
                         <div>
-                            <button class="amarillo" id="clear" onclick="clear()" style="background-color: orange; color: white; border-color: rgb(66, 66, 66);">CLEAR</button>
+                            <button class="amarillo" id="clear" onclick="cliar()" style="background-color: orange; color: white; border-color: rgb(66, 66, 66);">CLEAR</button>
                         </div>
                         <div>
                             <button class="vere" id="ok" onclick="okey()" style="background-color: green; color: white; border-color:rgb(66, 66, 66);">OK</button>
